@@ -168,20 +168,6 @@ fi
 
 for x in ${GRUB_TERMINAL_OUTPUT}; do
     if [ "x${x}" = "xgfxterm" ]; then
-        # If this platform supports gfxterm, try to use it.
-	if ! test -e ${GRUB_PREFIX}/gfxterm.mod ; then
-	    if [ "x$termoutdefault" != "x1" ]; then
-		echo "gfxterm isn't available on your platform" >&2 ; exit 1
-	    fi
-	    GRUB_TERMINAL_OUTPUT=
-	    break;
-	fi
-	if [ ! -s "${GRUB_PREFIX}/video.lst" ] ; then
-	    if [ "x$termoutdefault" != "x1" ]; then
-		echo "No suitable backend could be found for gfxterm." >&2 ; exit 1
-	    fi
-	    GRUB_TERMINAL_OUTPUT=
-	fi
 	if [ -n "$GRUB_FONT" ] ; then
 	    if is_path_readable_by_grub ${GRUB_FONT} > /dev/null ; then
 		GRUB_FONT_PATH=${GRUB_FONT}
